--- a/vegan1.css
+++ b/vegan1.css
@@ -1,6 +1,10 @@
 body{
     margin: 0%;
 }
+.row {
+    margin-right: 0 !important;
+    overflow-x: hidden;
+}
 #top{
     float: right;
     padding-right: 3vw;
